--- a/src/css/preloader.css
+++ b/src/css/preloader.css
@@ -5,7 +5,6 @@
   z-index: 1000;
   transition: 1s all;
   opacity: 1;
-  position: relative;
   visibility: visible;
   position: fixed;
   top: 0;
@@ -15,7 +14,7 @@
 .loader {
   position: absolute;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100px;
